Fix spacing in #main-card-container-b, adjust padding for section.card-text

--- a/src/App.css
+++ b/src/App.css
@@ -66,7 +66,7 @@
   }
 
   section.card-text {
-    padding: 5px;
+    padding: 10px 0 0 0;
   }
 }
 
@@ -124,12 +124,12 @@ body {
 }
 
 #main-card-container-b {
-    background-color: rgba(48, 48, 48, 0.5);
-    display: grid;
-    grid-template-columns: 55% auto;
-    grid-template-rows: 45vh;
-    z-index: 1;
-  }
+  background-color: rgba(48, 48, 48, 0.5);
+  display: grid;
+  grid-template-columns: 55% auto;
+  grid-template-rows: 45vh;
+  z-index: 1;
+}
 
 .main.card {
   text-align: center;
@@ -197,10 +197,7 @@ body {
   background: rgba(0, 0, 0, 0.35);
   grid-column: 2;
   grid-row: 2;
-  margin-top: 10px;
-  padding-top: 30px;
-  padding-left: 10px;
-  padding-right: 10px;
+  padding: 4vh 0 4vh 0;
   font-weight: bold;
   border: solid white;
 }
